--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-<script src="./src/index.js" type="module"></script>
+<script src="./src/index.js"></script>
 </body>
 </html>
